--- a/project/build.properties
+++ b/project/build.properties
@@ -4,5 +4,5 @@ project.organization=cellml.org
 project.name=cellml-metadata-editor
 sbt.version=0.7.4
 project.version=1.0
-build.scala.versions=2.8.0.RC6
+build.scala.versions=2.8.0
 project.initialize=false
